--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WinBoat</title>
-    <script src="./xel/xel.js" type="module"></script>
+    <script src="./public/xel/xel.js" type="module"></script>
     <meta name="xel-theme" content="./xel/themes/fluent-dark.css">
     <meta name="xel-icons" content="./xel/icons/fluent.svg">
     <meta name="xel-accent-color" content="#A78AF9">
